app/assets/stylesheets/_site.scss
/* ... */
body, html {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    -webkit-text-size-adjust: none;
}

body {
    padding-left: env(safe-area-inset-left);
    padding-right: env(safe-area-inset-right);
    font-family: $font-stack;
    font-size: 14px;
    background-color: $body-background-color;
    color: $text-color;
    &.theme-night {
        color: $text-color-night;
        background-color: $body-background-color-night;
        & .modal {
            color: $text-color;
        }
    }
    &.theme-sunset {
        color: $text-color-sunset;
        background-color: $body-background-color-sunset;
        & .modal {
            color: $text-color;
        }
    }
    @include respond-to(hidpi) {
        -webkit-font-smoothing: antialiased;
    }
}

a {
    color: $selected;
    text-decoration: none;
}

a:hover {
    color: $selected-hover;
    text-decoration: underline;
}

a:focus {
    outline: thin dotted #333;
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: -2px;
}

a:hover,
a:active {
    outline: 0;
}

p {
    margin: 0 0 15px 0;
}

sub,
sup {
    position: relative;
    font-size: 75%;
    line-height: 0;
    vertical-align: baseline;
}

sup {
    top: -0.5em;
}

sub {
    bottom: -0.25em;
}

pre {
    white-space: pre-wrap;
}

pre code {
    background-color: transparent;
}

iframe {
    border: none;
}

:focus {
  outline-color: transparent;
  outline-style: none;
}

button,
input,
select,
textarea {
    margin: 0;
    font-size: 100%;
    vertical-align: middle;
    font-family: $font-stack;
}

button,
input {
    *overflow: visible;
    line-height: normal;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
    padding: 0;
    border: 0;
}

input[type="text"],
input[type="email"],
input[type="password"],
input[type="url"],
input[type="search"],
input[type="tel"] {
    appearance: none;
}

button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
    cursor: pointer;
    appearance: button;
}

label,
select,
button,
input[type="button"],
input[type="reset"],
input[type="submit"],
input[type="radio"],
input[type="checkbox"] {
    cursor: pointer;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button {
        appearance: none;
}

textarea {
    overflow: auto;
    vertical-align: top;
}

textarea,
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"],
.uneditable-input {
    border: 1px solid transparent;
    @include border-color($border-color, $border-color-night, $border-color-sunset);
    @include color($text-header-color, $text-header-color, $text-header-color);
    @include background-color($input-background-color, $input-background-color-night, $input-background-color-sunset);
    font-size: 14px;
    padding: 5px 8px;
    max-width: 300px;
    width: 100%;
    display: inline-block;
    margin-bottom: 7px;
    line-height: 20px;
    vertical-align: middle;
    border-radius: 4px;
    &:focus {
        outline: none;
        border-color: $selected;
    }
}
.modal {
    textarea,
    input[type="text"],
    input[type="password"],
    input[type="datetime"],
    input[type="datetime-local"],
    input[type="date"],
    input[type="month"],
    input[type="time"],
    input[type="week"],
    input[type="number"],
    input[type="email"],
    input[type="url"],
    input[type="search"],
    input[type="tel"],
    input[type="color"],
    .uneditable-input {
        border-color: $border-color;
        &:focus {
            border-color: $selected;
        }
    }
}

::-webkit-input-placeholder {
    color: $text-color-light;
}

:-moz-placeholder {
    color: $text-color-light;
}

::-moz-placeholder {
    color: $text-color-light;
}

:-ms-input-placeholder {
    color: $text-color-light;
}

input.processing {
    background-image: image-url("spinner-day.svg");
    background-position: 97% 7px;
    background-repeat: no-repeat;
    background-size: 16px 16px;
}

select {
    margin-bottom: 0;
}

label {
    margin-bottom: 1px;
    display: block;
}

.radio, .checkbox {
    min-height: 20px;
    padding-left: 20px;
}

.radio input[type="radio"], .checkbox input[type="checkbox"] {
    float: left;
    margin-left: -20px;
}

label select {
    margin-bottom: 0;
}

.field_with_errors input,
input.error {
    border: 1px solid red;
}

table {
    max-width: 100%;
    background-color: transparent;
    border-collapse: collapse;
    border-spacing: 0;
}

table {
    max-width: 100%;
    background-color: transparent;
}

.table {
    width: 100%;
    margin-bottom: 20px;
}

.table thead > tr > th,
.table tbody > tr > th,
.table tfoot > tr > th,
.table thead > tr > td,
.table tbody > tr > td,
.table tfoot > tr > td {
    padding: 8px;
    line-height: 1.428571429;
    vertical-align: top;
    border-top: 1px solid transparent;
    @include border-color($border-color, $border-color-night, $border-color-sunset);
}

.table thead > tr > th {
    vertical-align: bottom;
}

.table caption + thead tr:first-child th,
.table colgroup + thead tr:first-child th,
.table thead:first-child tr:first-child th,
.table caption + thead tr:first-child td,
.table colgroup + thead tr:first-child td,
.table thead:first-child tr:first-child td {
    border-top: 0;
}

.table tbody + tbody {
    border-top: 2px solid transparent;
    @include border-color($border-color, $border-color-night, $border-color-sunset);
}

.table .table {
    background-color: transparent;
}

.table-condensed thead > tr > th,
.table-condensed tbody > tr > th,
.table-condensed tfoot > tr > th,
.table-condensed thead > tr > td,
.table-condensed tbody > tr > td,
.table-condensed tfoot > tr > td {
    padding: 5px;
}
/* ... */

